Update a11y of text

--- a/about.html
+++ b/about.html
@@ -15,6 +15,12 @@
             background-blend-mode: screen;
             height: 100vh;
         }
+
+        .text-area {
+            background-color: #cef8ec;
+            padding: 2px;
+            width: fit-content;
+        }
     </style>
 </head>
 
@@ -23,10 +29,13 @@
 
     <h1>about</h1>
 
-    <p>This site uses no frameworks, I did everything in vanilla javascript. Check out the piano room as it is really
-        cool.</p>
+    <div class="text-area">
+        <p>This site uses no frameworks, I did everything in vanilla javascript. Check out the piano room as it is
+            really
+            cool.</p>
 
-    <p>I hope you liked my website. It looks terrible and I am proud of that.</p>
+        <p>I hope you liked my website. It looks terrible and I am proud of that.</p>
+    </div>
 
     <site-footer></site-footer>
 </body>
