--- a/music.html
+++ b/music.html
@@ -15,6 +15,12 @@
          background-blend-mode: soft-light;
          height: 100vh;
       }
+
+      .text-area {
+         background-color: #ffe3fe;
+         padding: 2px;
+         width: fit-content;
+      }
    </style>
 </head>
 
@@ -23,24 +29,26 @@
 
    <h1>music</h1>
 
-   <p>here are some links to all my music that I've made</p>
+   <div class="text-area">
+      <p>here are some links to all my music that I've made</p>
 
-   <ul>
-      <li><a href="https://music.youtube.com/channel/UC9dJ39aJlhBUI5hAXn7FELA">youtube music</a></li>
-      <li><a href="https://open.spotify.com/artist/6Yv8umymUnPVmvFLBPrHF7">spotify</a></li>
-      <li><a href="https://music.apple.com/us/artist/nnik/1559837154">apple music</a></li>
-      <li><a href="https://soundcloud.com/nauticalnik">soundcloud (older music not the same as above)</a>
-      </li>
-   </ul>
+      <ul>
+         <li><a href="https://music.youtube.com/channel/UC9dJ39aJlhBUI5hAXn7FELA">youtube music</a></li>
+         <li><a href="https://open.spotify.com/artist/6Yv8umymUnPVmvFLBPrHF7">spotify</a></li>
+         <li><a href="https://music.apple.com/us/artist/nnik/1559837154">apple music</a></li>
+         <li><a href="https://soundcloud.com/nauticalnik">soundcloud (older music not the same as above)</a>
+         </li>
+      </ul>
 
-   <p>things i use to make music:</p>
-   <ul>
-      <li>ableton</li>
-      <li>roland jv-1080</li>
-      <li>roland tr-8s</li>
-      <li>novation peak</li>
-      <li>fender stratocaster (triple color sunburst because it looks cool)</li>
-   </ul>
+      <p>things i use to make music:</p>
+      <ul>
+         <li>ableton</li>
+         <li>roland jv-1080</li>
+         <li>roland tr-8s</li>
+         <li>novation peak</li>
+         <li>fender stratocaster (triple color sunburst because it looks cool)</li>
+      </ul>
+   </div>
 
    <site-footer></site-footer>
 </body>
