--- a/piano.html
+++ b/piano.html
@@ -73,7 +73,10 @@
          margin-bottom: 16px;
       }
 
-      .piano-container {
+      .piano-container,
+      .intro {
+         background-color: #f8e0c8;
+         padding: 4px;
          position: relative;
       }
 
@@ -95,7 +98,7 @@
    <site-footer></site-footer>
 
    <h1>this is the piano room, play the piano</h1>
-   <p>Use your keyboard to play (asdfghjk are white keys) or click on some keys</p>
+   <p class="intro">Use your keyboard to play (asdfghjk are white keys) or click on some keys</p>
 
    <div class="piano-container">
       <div class="blocker" data-blocker>
