--- a/stone-sculptures.html
+++ b/stone-sculptures.html
@@ -25,6 +25,13 @@
       .section {
          flex: 0 1 300px;
       }
+
+      .section .text-area,
+      .intro {
+         background-color: #fdffff;
+         padding: 2px;
+         width: fit-content;
+      }
    </style>
 </head>
 
@@ -33,7 +40,7 @@
 
    <h1>stone sculptures</h1>
 
-   <p>
+   <p class="intro">
       I have begun sculpting stone. I currently have a few pieces that I've completed and some in progress.
    </p>
 
@@ -41,52 +48,63 @@
       <div class="section">
          <h2>001 - abstract marble</h2>
          <img width="300px" src="images/marble.jpg" alt="an abstract sculpture made from marble"></img>
-         <p>
-            this was my first piece I made. I learned a lot about working with smaller pieces, filing stone down, and
-            sanding. it now resides somewhere in my parent's house
-         </p>
+         <div class="text-area">
+            <p>
+               this was my first piece I made. I learned a lot about working with smaller pieces, filing stone down, and
+               sanding. it now resides somewhere in my parent's house
+            </p>
+         </div>
       </div>
 
       <div class="section">
          <h2>002 - alabaster love</h2>
          <img width="300px" src="images/alabaster-guz.jpg"
             alt="an abstract sculpture made from alabaster. it resembles a heart and a butt"></img>
-         <p>
-            my second piece was made out of alabaster. alabaster is really soft and I learned a lot about how easy it
-            is to bruise stone with chisels. this one is in my flat
-         </p>
+         <div class="text-area">
+            <p>
+               my second piece was made out of alabaster. alabaster is really soft and I learned a lot about how easy it
+               is to bruise stone with chisels. this one is in my flat
+            </p>
+         </div>
       </div>
 
       <div class="section">
          <h2>003 - relaxed nude</h2>
          <img width="300px" src="images/other_marble.jpg"
             alt="a sculpture made from marble showing a nude male figure"></img>
-         <p>
-            the third piece I made is a larger marble sculpture. I was still learning about bruising stone with chisels
-            and this one has very clear signs in the tight areas. this one lives in my flat
-         </p>
+         <div class="text-area">
+            <p>
+               the third piece I made is a larger marble sculpture. I was still learning about bruising stone with
+               chisels
+               and this one has very clear signs in the tight areas. this one lives in my flat
+            </p>
+         </div>
       </div>
 
       <div class="section">
          <h2>004 - alabaster love 2</h2>
          <img width="300px" src="images/alabaster-kur.jpg"
             alt="a sculpture made from alabaster featuring an erect penis"></img>
-         <p>
-            this one is uh... probably my best work but also the one I don't like to show people? it's made from the
-            same alabaster as the second piece and they kinda fit together. it's hidden in my flat
-         </p>
+         <div class="text-area">
+            <p>
+               this one is uh... probably my best work but also the one I don't like to show people? it's made from the
+               same alabaster as the second piece and they kinda fit together. it's hidden in my flat
+            </p>
+         </div>
       </div>
 
       <div class="section">
          <h2>005 - migraine</h2>
          <img width="300px" src="images/migraine.jpg"
             alt="a sculpture depicting a head being held by a hand with brains oozing out of it"></img>
-         <p>
-            this is my biggest piece yet. I started this piece without knowing where I was going. it's still a work in
-            progress but it's almost complete (as of june 2025). I BELIEVE this is limestone, but it might be alabaster.
-            I have to do some tests on the stone to figure out what it is because I don't really recall what type of
-            stone I bought. this is also the first piece that doesn't depict genitalia
-         </p>
+         <div class="text-area">
+            <p>
+               this is my biggest piece yet. I started this piece without knowing where I was going. I BELIEVE this is
+               limestone, but it might be alabaster.
+               I have to do some tests on the stone to figure out what it is because I don't really recall what type of
+               stone I bought. this is also the first piece that doesn't depict genitalia
+            </p>
+         </div>
       </div>
 
    </div>
