--- a/friends.html
+++ b/friends.html
@@ -15,6 +15,12 @@
          background-blend-mode: overlay;
          height: 100vh;
       }
+
+      .text-area {
+         background-color: #cada80;
+         padding: 2px;
+         width: fit-content;
+      }
    </style>
 </head>
 
@@ -23,36 +29,40 @@
 
    <h1>friends</h1>
 
-   <p>
-      check out some of the things my friends and family do
-   </p>
+   <div class="text-area">
+      <p>
+         check out some of the things my friends and family do
+      </p>
 
-   <h2><a href="https://www.malindiwalker.com/" target="_blank">malindi walker - photography</a></h2>
-   <p>
-      <a href="https://www.instagram.com/malindijo/" target="_blank">instagram</a>
-      <br />
-      malindi is an amazing analog film photographer who works primarily in black and white. she has a ton of experience
-      photographing live concerts and fashion, as well as putting on art exhibitions. if you need a professional and
-      highly
-      experineced photographer please don't hesitate to reach out to her
-   </p>
+      <h2><a href="https://www.malindiwalker.com/" target="_blank">malindi walker - photography</a></h2>
+      <p>
+         <a href="https://www.instagram.com/malindijo/" target="_blank">instagram</a>
+         <br />
+         malindi is an amazing analog film photographer who works primarily in black and white. she has a ton of
+         experience
+         photographing live concerts and fashion, as well as putting on art exhibitions. if you need a professional and
+         highly
+         experineced photographer please don't hesitate to reach out to her
+      </p>
 
-   <h2><a href="https://anthonytesija.com/" target="_blank">anthony tesija - live visuals and games</a></h2>
-   <p>
-      <a href="https://www.instagram.com/antontesh/" target="_blank">instagram</a>
-      <br />
-      did you spend a lot of time as a teen watching the winamp or itunes visualizer? do you play music or dj? if so
-      you should check out my brother anthony's work. he puts on live visualizers that react to any sounds you feel like
-      making
-      book him for your next show! also he makes cool games and stuff and other art things he's pretty talented
-   </p>
+      <h2><a href="https://anthonytesija.com/" target="_blank">anthony tesija - live visuals and games</a></h2>
+      <p>
+         <a href="https://www.instagram.com/antontesh/" target="_blank">instagram</a>
+         <br />
+         did you spend a lot of time as a teen watching the winamp or itunes visualizer? do you play music or dj? if so
+         you should check out my brother anthony's work. he puts on live visualizers that react to any sounds you feel
+         like
+         making
+         book him for your next show! also he makes cool games and stuff and other art things he's pretty talented
+      </p>
 
-   <h2><a href="https://jerrypop.com/" target="_blank">jerry haagsma - the king of popcorn</a></h2>
-   <p>
-      <a href="https://www.instagram.com/craftpopcorn/" target="_blank">instagram</a>
-      <br />
-      this guy makes popcorn
-   </p>
+      <h2><a href="https://jerrypop.com/" target="_blank">jerry haagsma - the king of popcorn</a></h2>
+      <p>
+         <a href="https://www.instagram.com/craftpopcorn/" target="_blank">instagram</a>
+         <br />
+         this guy makes popcorn
+      </p>
+   </div>
 
    <site-footer></site-footer>
 </body>
