cleanup some borders

--- a/about.html
+++ b/about.html
@@ -18,7 +18,9 @@
 
         .text-area {
             background-color: #cef8ec;
+            border: 6px double black;
             padding: 2px;
+            margin-bottom: 8px;
             width: fit-content;
         }
     </style>
