--- a/friends.html
+++ b/friends.html
@@ -17,7 +17,9 @@
       }
 
       .text-area {
+         border: 6px double black;
          background-color: #cada80;
+         margin-bottom: 8px;
          padding: 2px;
          width: fit-content;
       }
