--- a/music.html
+++ b/music.html
@@ -18,6 +18,8 @@
 
       .text-area {
          background-color: #ffe3fe;
+         border: 6px double black;
+         margin-bottom: 8px;
          padding: 2px;
          width: fit-content;
       }
