--- a/stone-sculptures.html
+++ b/stone-sculptures.html
@@ -20,15 +20,21 @@
          display: flex;
          flex-wrap: wrap;
          gap: 8px;
+         margin-bottom: 8px;
       }
 
       .section {
          flex: 0 1 300px;
       }
 
+      .section img {
+         border: 6px double black;
+      }
+
       .section .text-area,
       .intro {
          background-color: #fdffff;
+         border: 6px double black;
          padding: 2px;
          width: fit-content;
       }
