--- a/websites.html
+++ b/websites.html
@@ -3,16 +3,10 @@
 
 <head>
    <meta charset="UTF-8">
-   <meta name="viewport"
-         content="width=device-width, initial-scale=1">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>websites</title>
-   <link rel="icon"
-         href="images/favicon.ico"
-         type="image/ico"
-         sizes="16x16">
-   <link rel="preload"
-         href="background-textures/Elements_17-256x256.png"
-         as="image" />
+   <link rel="icon" href="images/favicon.ico" type="image/ico" sizes="16x16">
+   <link rel="preload" href="background-textures/Elements_17-256x256.png" as="image" />
    <script src="site-footer.js"></script>
    <style>
       body {
@@ -24,6 +18,8 @@
 
       .text-area {
          background-color: #ffe48c;
+         border: 6px double black;
+         margin-bottom: 8px;
          padding: 2px;
          width: fit-content;
       }
@@ -35,19 +31,14 @@
 
    <h1>websites</h1>
 
-   <a href="mailto:contact@nik.horse?subject=i want a website like the one you made please"
-      target="_blank">
-      <img src="images/email.gif"
-           height="31"
-           width="88"
-           alt="email image, clicking links to my email">
+   <a href="mailto:contact@nik.horse?subject=i want a website like the one you made please" target="_blank">
+      <img src="images/email.gif" height="31" width="88" alt="email image, clicking links to my email">
    </a>
 
    <div class="text-area">
       <p>
          do you like this website? do you want one for yourself? I can make you a website like this. please
-         <a href="mailto:contact@nik.horse?subject=i want a website like the one you made please"
-            target="_blank">e-mail
+         <a href="mailto:contact@nik.horse?subject=i want a website like the one you made please" target="_blank">e-mail
             me</a>
          and I will work with you on making a website similar to this (or better!).
       </p>
@@ -70,7 +61,7 @@
          </li>
       </ul>
    </div>
-   
+
    <site-footer></site-footer>
 </body>
 
