--- a/piano.html
+++ b/piano.html
@@ -77,6 +77,7 @@
       .intro {
          background-color: #f8e0c8;
          padding: 4px;
+         margin-bottom: 8px;
          position: relative;
       }
 
