--- a/videos.html
+++ b/videos.html
@@ -20,6 +20,7 @@
          display: flex;
          flex-wrap: wrap;
          gap: 8px;
+         margin-bottom: 8px;
       }
 
       .section {
@@ -29,6 +30,7 @@
       .section .text-area,
       .intro {
          background-color: #fffac5;
+         border: 6px double black;
          padding: 2px;
          width: fit-content;
       }
