--- a/stone-sculptures.html
+++ b/stone-sculptures.html
@@ -38,6 +38,10 @@
          padding: 2px;
          width: fit-content;
       }
+
+      h3 {
+         font-size: 1em;
+      }
    </style>
 </head>
 
@@ -51,50 +55,15 @@
    </p>
 
    <div class="container">
-      <div class="section">
-         <h2>001 - abstract marble</h2>
-         <img width="300px" src="images/marble.jpg" alt="an abstract sculpture made from marble"></img>
-         <div class="text-area">
-            <p>
-               this was my first piece I made. I learned a lot about working with smaller pieces, filing stone down, and
-               sanding. it now resides somewhere in my parent's house
-            </p>
-         </div>
-      </div>
 
       <div class="section">
-         <h2>002 - alabaster love</h2>
-         <img width="300px" src="images/alabaster-guz.jpg"
-            alt="an abstract sculpture made from alabaster. it resembles a heart and a butt"></img>
+         <h2>006 - green abstract marble</h2>
+         <img width="300px" src="images/green-marble.jpg"
+            alt="a sculpture depicting abstract shapes"></img>
          <div class="text-area">
+            <h3>November 2025</h3>
             <p>
-               my second piece was made out of alabaster. alabaster is really soft and I learned a lot about how easy it
-               is to bruise stone with chisels. this one is in my flat
-            </p>
-         </div>
-      </div>
-
-      <div class="section">
-         <h2>003 - relaxed nude</h2>
-         <img width="300px" src="images/other_marble.jpg"
-            alt="a sculpture made from marble showing a nude male figure"></img>
-         <div class="text-area">
-            <p>
-               the third piece I made is a larger marble sculpture. I was still learning about bruising stone with
-               chisels
-               and this one has very clear signs in the tight areas. this one lives in my flat
-            </p>
-         </div>
-      </div>
-
-      <div class="section">
-         <h2>004 - alabaster love 2</h2>
-         <img width="300px" src="images/alabaster-kur.jpg"
-            alt="a sculpture made from alabaster featuring an erect penis"></img>
-         <div class="text-area">
-            <p>
-               this one is uh... probably my best work but also the one I don't like to show people? it's made from the
-               same alabaster as the second piece and they kinda fit together. it's hidden in my flat
+               this abstract piece is made from marble. it features many curves that look similar to different body parts from every angle. i'm starting to notice that hands are appearing in my art more than genitalia
             </p>
          </div>
       </div>
@@ -104,11 +73,64 @@
          <img width="300px" src="images/migraine.jpg"
             alt="a sculpture depicting a head being held by a hand with brains oozing out of it"></img>
          <div class="text-area">
+            <h3>June 2025</h3>
             <p>
                this is my biggest piece yet. I started this piece without knowing where I was going. I BELIEVE this is
                limestone, but it might be alabaster.
                I have to do some tests on the stone to figure out what it is because I don't really recall what type of
                stone I bought. this is also the first piece that doesn't depict genitalia
+            </p>
+         </div>
+      </div>
+
+      <div class="section">
+         <h2>004 - alabaster love 2</h2>
+         <img width="300px" src="images/alabaster-kur.jpg"
+            alt="a sculpture made from alabaster featuring an erect penis"></img>
+         <div class="text-area">
+            <h3>September 2024</h3>
+            <p>
+               this one is uh... probably my best work but also the one I don't like to show people? it's made from the
+               same alabaster as the second piece and they kinda fit together. it's hidden in my flat
+            </p>
+         </div>
+      </div>
+
+      <div class="section">
+         <h2>003 - relaxed nude</h2>
+         <img width="300px" src="images/other_marble.jpg"
+            alt="a sculpture made from marble showing a nude male figure"></img>
+         <div class="text-area">
+            <h3>June 2024</h3>
+            <p>
+               the third piece I made is a larger marble sculpture. I was still learning about bruising stone with
+               chisels
+               and this one has very clear signs in the tight areas. this one lives in my flat
+            </p>
+         </div>
+      </div>
+      
+      <div class="section">
+         <h2>002 - alabaster love</h2>
+         <img width="300px" src="images/alabaster-guz.jpg"
+            alt="an abstract sculpture made from alabaster. it resembles a heart and a butt"></img>
+         <div class="text-area">
+            <h3>January 2024</h3>
+            <p>
+               my second piece was made out of alabaster. alabaster is really soft and I learned a lot about how easy it
+               is to bruise stone with chisels. this one is in my flat. i finished this one before I finished the first piece
+            </p>
+         </div>
+      </div>
+
+      <div class="section">
+         <h2>001 - abstract marble</h2>
+         <img width="300px" src="images/marble.jpg" alt="an abstract sculpture made from marble"></img>
+         <div class="text-area">
+            <h3>May 2024</h3>
+            <p>
+               this was my first piece I made. I learned a lot about working with smaller pieces, filing stone down, and
+               sanding. it now resides somewhere in my parent's house
             </p>
          </div>
       </div>
