add paralaxed stars to personal website becuase julian doesn't want mine

--- a/index.html
+++ b/index.html
@@ -3,35 +3,28 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>nik tesija</title>
     <script src="site-footer.js"></script>
-    <link type="text/css"
-          rel="stylesheet"
-          href="styles/styles.css">
-    <link rel="icon"
-          href="images/favicon.ico"
-          type="image/ico"
-          sizes="16x16">
+    <link type="text/css" rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="images/favicon.ico" type="image/ico" sizes="16x16">
 </head>
 
 <body>
     <div>
-        <site-footer></site-footer>
+        <div class="footer-container">
+            <site-footer></site-footer>
+        </div>
 
-        <h1>nik tesija</h1>
-        <img height="200px"
-             width="200px"
-             src="images/portrait.jpg">
+        <div class="banner-text" id="banner-text">
+            <h1>nik tesija</h1>
+        </div>
+        <img height="200px" width="200px" src="images/portrait.jpg">
         <div class="header-text">
             <div class="icon-container">
-                <a href="https://www.instagram.com/niktesija/"
-                   target="_blank">instagram</a>
-                <a href="https://www.linkedin.com/in/nicholas-tesija/"
-                   target="_blank">linkedIn</a>
-                <a href="mailto:contact@nik.horse"
-                   target="_blank">e-mail me</a>
+                <a href="https://www.instagram.com/niktesija/" target="_blank">instagram</a>
+                <a href="https://www.linkedin.com/in/nicholas-tesija/" target="_blank">linkedIn</a>
+                <a href="mailto:contact@nik.horse" target="_blank">e-mail me</a>
             </div>
         </div>
         <a href="websites.html">
@@ -90,9 +83,7 @@
             </span>
             <div class="box-thing row">
                 <div class="multi">
-                    <img width="300px"
-                         src="images/telephones.jpg"
-                         alt="a 35mm photo of some payphones">
+                    <img width="300px" src="images/telephones.jpg" alt="a 35mm photo of some payphones">
                     <span class="text">
                         This is a picture I took on film of some payphones near Morro Bay. Kinda cool and eerie to
                         see
@@ -102,9 +93,7 @@
                     </span>
                 </div>
                 <div class="multi">
-                    <img width="300px"
-                         src="images/picnik.jpg"
-                         alt="a 35mm photo of a picnic">
+                    <img width="300px" src="images/picnik.jpg" alt="a 35mm photo of a picnic">
                     <span class="text">
                         My parents visit me sometimes and I like to record those moments. Here is us having a
                         picnic in Napa. We ate a lot of bread and cheese and drank a lot of wine.
@@ -114,7 +103,10 @@
         </div>
     </div>
 
-    <site-footer></site-footer>
+    <div class="footer-container">
+        <site-footer></site-footer>
+    </div>
+    <script src="background.js"></script>
 </body>
 
 </html>
