make site a little better

--- a/index.html
+++ b/index.html
@@ -12,99 +12,108 @@
 
 <body>
     <div>
-        <div class="footer-container">
-            <site-footer></site-footer>
-        </div>
-
-        <div class="banner-text" id="banner-text">
-            <h1>nik tesija</h1>
-        </div>
-        <img height="200px" width="200px" src="images/portrait.jpg">
-        <div class="header-text">
-            <div class="icon-container">
-                <a href="https://www.instagram.com/niktesija/" target="_blank">instagram</a>
-                <a href="https://www.linkedin.com/in/nicholas-tesija/" target="_blank">linkedIn</a>
-                <a href="mailto:contact@nik.horse" target="_blank">e-mail me</a>
+        <div class="page">
+            <div class="footer-container">
+                <site-footer></site-footer>
             </div>
-        </div>
-        <a href="websites.html">
-            <div class="website-box">
-                <h2>here for a website? click here!</h2>
+            <div class="left-side">
+                <div class="banner-text" id="banner-text">
+                    <h1>nik tesija</h1>
+                </div>
+                <img height="200px" width="200px" src="images/portrait.jpg">
+                <div class="header-text">
+                    <div class="icon-container">
+                        <a href="https://www.instagram.com/niktesija/" target="_blank">instagram</a>
+                        <a href="https://www.linkedin.com/in/nicholas-tesija/" target="_blank">linkedIn</a>
+                        <a href="mailto:contact@nik.horse" target="_blank">e-mail me</a>
+                    </div>
+                </div>
+                <a href="websites.html">
+                    <div class="website-box">
+                        <h2>here for a website? click here!</h2>
+                    </div>
+                </a>
             </div>
-        </a>
-        <h2>things I do</h2>
-        <div class="box-thing">
-            <h3>programming</h3>
-            <span class="text">
-                I worked at Google on Search, making it a pretty website as a front end engineer.
-                This website is my attempt to live life without Figma mocks or a javascript framework, everything is
-                vanilla js.
-            </span>
-        </div>
-        <div class="box-thing">
-            <h3>music</h3>
-            <span class="text">
-                I make music under the name NNIK. It used to be Nautical Nik, but then someone said it sounded like I
-                would be singing sea shanties (which would be cool but I don't). I like to make simple sounding songs
-                that evoke the same feeling as using the spray can tool in MS Paint (they're ok). I hate my voice but I
-                still sing.
-            </span>
-            <br />
-            <a href="music.html">this is a page with more info about my music.</a>
-        </div>
-
-        <div class="box-thing">
-            <h3>videos</h3>
-            <span class="text">
-                I often walk around with my hi8 video camera and film random things. I try to capture the essence of
-                old family videos.
-            </span>
-            <br />
-            <a href="videos.html">this is a page with more info about my videos.</a>
-        </div>
-
-        <div class="box-thing">
-            <h3>stone sculptures</h3>
-            <span class="text">
-                I recently started learning to sculpt stone. I'm still finding my style but enjoying the process
-            </span>
-            <br />
-            <a href="stone-sculptures.html">this is a page with more info about my sculptures. contians some nsfw
-                images</a>
-        </div>
-
-        <div class="box-thing">
-            <h3>photo</h3>
-            <span class="text">
-                I take pictures on 35mm film cameras for fun. Mostly of my friends, but some times I take pictures
-                of
-                other
-                things too.
-            </span>
-            <div class="box-thing row">
-                <div class="multi">
-                    <img width="300px" src="images/telephones.jpg" alt="a 35mm photo of some payphones">
+            <div class="right-side">
+                <h2>things I do</h2>
+                <div class="box-thing">
+                    <h3>programming</h3>
                     <span class="text">
-                        This is a picture I took on film of some payphones near Morro Bay. Kinda cool and eerie to
-                        see
-                        that this stuff is still lying around. I had a realization recently that I don't think I
-                        ever
-                        actually used a pay phone as a kid.
+                        I worked at Google on Search, making it a pretty website as a front end engineer.
+                        This website is my attempt to live life without Figma mocks or a javascript framework,
+                        everything is
+                        vanilla js.
                     </span>
                 </div>
-                <div class="multi">
-                    <img width="300px" src="images/picnik.jpg" alt="a 35mm photo of a picnic">
+                <div class="box-thing">
+                    <h3>music</h3>
                     <span class="text">
-                        My parents visit me sometimes and I like to record those moments. Here is us having a
-                        picnic in Napa. We ate a lot of bread and cheese and drank a lot of wine.
+                        I make music under the name NNIK. It used to be Nautical Nik, but then someone said it sounded
+                        like I
+                        would be singing sea shanties (which would be cool but I don't). I like to make simple sounding
+                        songs
+                        that evoke the same feeling as using the spray can tool in MS Paint (they're ok). I hate my
+                        voice but I
+                        still sing.
                     </span>
+                    <br />
+                    <a href="music.html">this is a page with more info about my music.</a>
+                </div>
+
+                <div class="box-thing">
+                    <h3>videos</h3>
+                    <span class="text">
+                        I often walk around with my hi8 video camera and film random things. I try to capture the
+                        essence of
+                        old family videos.
+                    </span>
+                    <br />
+                    <a href="videos.html">this is a page with more info about my videos.</a>
+                </div>
+
+                <div class="box-thing">
+                    <h3>stone sculptures</h3>
+                    <span class="text">
+                        I recently started learning to sculpt stone. I'm still finding my style but enjoying the process
+                    </span>
+                    <br />
+                    <a href="stone-sculptures.html">this is a page with more info about my sculptures. contians some
+                        nsfw
+                        images</a>
+                </div>
+
+                <div class="box-thing">
+                    <h3>photo</h3>
+                    <span class="text">
+                        I take pictures on 35mm film cameras for fun. Mostly of my friends, but some times I take
+                        pictures
+                        of
+                        other
+                        things too.
+                    </span>
+                    <div class="box-thing row">
+                        <div class="multi">
+                            <img width="300px" src="images/telephones.jpg" alt="a 35mm photo of some payphones">
+                            <span class="text">
+                                This is a picture I took on film of some payphones near Morro Bay. Kinda cool and eerie
+                                to
+                                see
+                                that this stuff is still lying around. I had a realization recently that I don't think I
+                                ever
+                                actually used a pay phone as a kid.
+                            </span>
+                        </div>
+                        <div class="multi">
+                            <img width="300px" src="images/picnik.jpg" alt="a 35mm photo of a picnic">
+                            <span class="text">
+                                My parents visit me sometimes and I like to record those moments. Here is us having a
+                                picnic in Napa. We ate a lot of bread and cheese and drank a lot of wine.
+                            </span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="footer-container">
-        <site-footer></site-footer>
     </div>
     <script src="background.js"></script>
 </body>
