add gif of game

--- a/my-game.html
+++ b/my-game.html
@@ -36,6 +36,10 @@
         <p><a href="https://ntesh.itch.io/growshrink" target="_blank">Link to game</a></p>
     </div>
 
+    <div>
+        <image width="400px" height="400px" src="images/rotateGif.gif"></image>
+    </div>
+
     <site-footer></site-footer>
 </body>
 
