--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="banner-text" id="banner-text">
                     <h1>nik tesija</h1>
                 </div>
-                <img height="200px" width="200px" src="images/portrait.jpg">
+                <img height="200px" src="images/portrait.png">
                 <div class="header-text">
                     <div class="icon-container">
                         <a href="https://www.instagram.com/niktesija/" target="_blank">instagram</a>
