compress the ever loving fuck out of the images

--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
             </div>
             <div class="right-side">
                 <h2>things I do</h2>
+
+                <div class="box-thing">
+                    <h3>stone sculptures</h3>
+                    <span class="text">
+                        I recently started learning to sculpt stone. I'm still finding my style but enjoying the process
+                    </span>
+                    <br />
+                    <a href="stone-sculptures.html">this is a page with more info about my sculptures. contians some
+                        nsfw
+                        images</a>
+                </div>
+
                 <div class="box-thing">
                     <h3>programming</h3>
                     <span class="text">
@@ -39,7 +51,16 @@
                         everything is
                         vanilla js.
                     </span>
+                    <br />
+                    <span class="text">
+                        Right now I am working on an exploration adventure game where you can shrink
+                        and grow.
+                    </span>
+                    <br />
+                    <a href="my-game.html">check out
+                        the shrinko page for more info</a>
                 </div>
+
                 <div class="box-thing">
                     <h3>music</h3>
                     <span class="text">
@@ -64,17 +85,6 @@
                     </span>
                     <br />
                     <a href="videos.html">this is a page with more info about my videos.</a>
-                </div>
-
-                <div class="box-thing">
-                    <h3>stone sculptures</h3>
-                    <span class="text">
-                        I recently started learning to sculpt stone. I'm still finding my style but enjoying the process
-                    </span>
-                    <br />
-                    <a href="stone-sculptures.html">this is a page with more info about my sculptures. contians some
-                        nsfw
-                        images</a>
                 </div>
 
                 <div class="box-thing">
