--- a/my-game.html
+++ b/my-game.html
@@ -28,7 +28,7 @@
 <body>
     <site-footer></site-footer>
 
-    <h1>my game</h1>
+    <h1>shrinko</h1>
 
     <div class="text-area">
         <p>I have been developing a game since December 2024. It's a 3d platformer/puzzle game where you are able to
