--- a/videos.html
+++ b/videos.html
@@ -77,6 +77,20 @@
             </p>
          </div>
       </div>
+
+      <div class="section">
+         <h2>A grand view</h2>
+         <iframe width="300" src="https://www.youtube.com/embed/aEbhmta2GvQ" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         <div class="text-area">
+            <p>
+               This is a video of one of my favorite parks in san francisco. I was feeling nostalgic after I moved to
+               london so I added some somber music I made in less than an hour overtop some pretty shots
+            </p>
+         </div>
+      </div>
    </div>
    <site-footer></site-footer>
 </body>
